--- a/locales/ja.json
+++ b/locales/ja.json
@@ -21,5 +21,5 @@
   "countDown_messageBefore": "",
   "countDown_messageAfter": "秒後に送信します",
   "countDown_sendButtonLabel": "今すぐ送信",
-  "countDown_cancelButtonLabel": "キャンセル",
+  "countDown_cancelButtonLabel": "キャンセル"
 }
