--- a/locales/en.json
+++ b/locales/en.json
@@ -21,5 +21,35 @@
   "countDown_messageBefore": "",
   "countDown_messageAfter": "seconds to send",
   "countDown_sendButtonLabel": "Send Now",
-  "countDown_cancelButtonLabel": "Cancel"
+  "countDown_cancelButtonLabel": "Cancel",
+
+  "setting_trustedDomains" : "Trusted Domains and Addresses",
+  "setting_trustedDomainsExample" : "example.com\n-example.org",
+  "setting_trustedDomainsPolicy" : "# Trusted Domains and Addresses ###\n# The following domains and addresses are trusted by Group Policy.\n#\n# ${policy}\n#\n# To add more domains or addresses, input entries (one per line) below.\n# You can also exclude domains or addresses by adding \"-\" at the beginning.\n# And wildcards (* and ?) are also available.\n# When an entry contains @, the entry is regarded as address.\n# When an entry does not contains @, the entry is regarded as domain.\n##################################\n\n${user}",
+  "setting_trustedDomainsTemplate" : "# Trusted Domains and Addresses ###\n#\n# (1) Set the list of domains and addresses to be treated as internal ones.\n# (2) Enter one entry per line as follows.\n# (3) Lines starting with # are ignored.\n# (4) Wildcards (* and ?) are available.\n# (5) When an entry contains @, the entry is regarded as address.\n# (6) When an entry does not contains @, the entry is regarded as domain.\n#\n##################################\n\nexample.com\nexample.org",
+  "setting_unsafeDomains" : "Unsafe Domains and Addresses",
+  "setting_unsafeDomainsExample" : "example.com\n-example.org",
+  "setting_unsafeDomainsPolicy" : "# Unsafe Domains and Addresses ###\n# The following domains and addresses are considered unsafe by Group Policy.\n#\n# ${policy}\n#\n# To add more domains or addresses, input entries (one per line) below.\n# You can also exclude domains or addresses by adding \"-\" at the beginning.\n# And wildcards (* and ?) are also available.\n# When an entry contains @, the entry is regarded as address.\n# When an entry does not contains @, the entry is regarded as domain.\n##################################\n\n${user}",
+  "setting_unsafeDomainsTemplate" : "# Unsafe Domains and Addresses ###\n#\n# (1) Set the list of domains and addresses to show an "unsafe recipient" warning.\n# (2) Enter one entry per line as follows.\n# (3) Lines starting with # are ignored.\n# (4) Wildcards (* and ?) are available.\n# (5) When an entry contains @, the entry is regarded as address.\n# (6) When an entry does not contains @, the entry is regarded as domain.\n#\n##################################\n\nexample.com\nexample.org",
+  "setting_unsafeFiles" : "Unsafe Files",
+  "setting_unsafeFilesExample" : "Confidential\n-ExcludedItem",
+  "setting_unsafeFilesPolicy" : "# Unsafe Files ###\n# The following keywords are considered unsafe by Group Policy.\n#\n# ${policy}\n#\n# To add more keywords, input entries (one per line) below.\n# You can also exclude keywords by adding \"-\" at the beginning.\n# And wildcards (* and ?) are also available.\n##################################\n\n${user}",
+  "setting_unsafeFilesTemplate" : "# Unsafe Files ###\n#\n# (1) Set the list of keywords to show an \"unsafe filename\" warning.\n# (2) Enter one entry per line as follows.\n# (3) Lines starting with # are ignored.\n# (4) Wildcards (* and ?) are available.\n#\n##################################\n\nsecret\nconfidential",
+  "setting_configMisc": "Miscellaneous",
+  "setting_configCount": "Countdown",
+  "setting_configCountAllowSkip": "Show \"Send Now\" button in the countdown dialog",
+  "setting_configCountEnabled": "Show a countdown clock when sending a message",
+  "setting_configCountSeconds": "Delay sending a message by",
+  "setting_configGeneral": "General",
+  "setting_configMainSkipIfNoExt": "Skip confirmation if all the recpients are trusted.",
+  "setting_configSafeBccEnabled": "Enable \"too many domains in To/Cc fields\" warnings",
+  "setting_configSafeBccThreshold": "Warn if To/Cc fields contain",
+  "setting_configSafeNewDomainsEnabled": "Confirm when any recipients with domains different from any existing recipients are added",
+  "setting_configTrustedDomains": "Configure Trusted Domains and Addresses",
+  "setting_configUnsafeDomains": "Configure Unsafe Domains and Addresses",
+  "setting_configUnsafeFiles": "Configure Unsafe Files",
+  "setting_configWarning": "To/Cc",
+  "setting_configWindowTitle": "FlexConfirmMail Options",
+  "setting_aboutAddon": "Version",
+  "setting_saveAndQuit": "Save and Exit"
 }
