--- a/locales/ja.json
+++ b/locales/ja.json
@@ -21,5 +21,35 @@
   "countDown_messageBefore": "",
   "countDown_messageAfter": "秒後に送信します",
   "countDown_sendButtonLabel": "今すぐ送信",
-  "countDown_cancelButtonLabel": "キャンセル"
+  "countDown_cancelButtonLabel": "キャンセル",
+
+  "setting_trustedDomains" : "社内ドメイン・アドレス",
+  "setting_trustedDomainsExample" : "example.com\n-example.org",
+  "setting_trustedDomainsPolicy" : "# 社内ドメイン・アドレス設定 ###\n# 組織設定により、社内ドメイン・アドレスとして以下が指定されています。\n#\n# ${policy}\n#\n# さらにドメイン・アドレスを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、ドメイン・アドレスを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n# @を含む場合はアドレスが指定されたとみなします。\n# @を含まない場合はドメインが指定されたとみなします。\n##################################\n\n${user}",
+  "setting_trustedDomainsTemplate" : "# 社内ドメイン・アドレス設定 ###\n#\n# (1) 送信時に社内の宛先として扱うドメイン・アドレスを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n# (4) 指定にはワイルドカード（*および?）を使用可能です。\n# (5) @を含む場合はアドレスが指定されたとみなします。\n# (6) @を含まない場合はドメインが指定されたとみなします。\n#\n##################################\n\nexample.com\nexample.org",
+  "setting_unsafeDomains" : "注意が必要なドメイン・アドレス",
+  "setting_unsafeDomainsExample" : "example.com\n-example.org",
+  "setting_unsafeDomainsPolicy" : "# 注意が必要なドメイン・アドレス設定 ###\n# 組織設定により、注意が必要なドメイン・アドレスとして以下が指定されています。\n#\n# ${policy}\n#\n# さらにドメイン・アドレスを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、ドメイン・アドレスを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n# @を含む場合はアドレスが指定されたとみなします。\n# @を含まない場合はドメインが指定されたとみなします。\n##################################\n\n${user}",
+  "setting_unsafeDomainsTemplate" : "# 注意が必要なドメイン・アドレス設定 ###\n#\n# (1) 送信時に警告対象とする注意ドメイン・アドレスを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n# (4) 指定にはワイルドカード（*および?）を使用可能です。\n# (5) @を含む場合はアドレスが指定されたとみなします。\n# (6) @を含まない場合はドメインが指定されたとみなします。\n#\n##################################\n\nexample.com\nexample.org",
+  "setting_unsafeFiles" : "注意が必要なファイル名",
+  "setting_unsafeFilesExample" : "社外秘\n-除外キーワード",
+  "setting_unsafeFilesPolicy" : "# 注意が必要なファイル名設定 ###\n# 組織設定により、注意が必要なファイル名として以下が指定されています。\n#\n# ${policy}\n#\n# さらにキーワードを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、キーワードを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n##################################\n\n${user}",
+  "setting_unsafeFilesTemplate" : "# 注意が必要なファイル名設定 ###\n#\n# (1) 添付ファイルに含まれる場合に警告する注意ワードを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n#\n##################################\n\n社外秘\n機密",
+  "setting_configMisc": "その他の設定",
+  "setting_configCount": "送信カウントダウン設定",
+  "setting_configCountAllowSkip": "カウントダウンのダイアログの「いますぐ送信」ボタンを有効化する",
+  "setting_configCountEnabled": "メール送信前のカウントダウンを有効化する",
+  "setting_configCountSeconds": "送信までのカウントダウン秒数:",
+  "setting_configGeneral": "一般設定",
+  "setting_configMainSkipIfNoExt": "宛先が社内のみの場合は確認をスキップする",
+  "setting_configSafeBccEnabled": "To/CCに一定数以上のドメインが含まれている場合に警告する",
+  "setting_configSafeBccThreshold": "警告対象となるドメインの数:",
+  "setting_configSafeNewDomainsEnabled": "返信の宛先に今まで含まれていなかったドメインのアドレスが追加された場合に警告する",
+  "setting_configTrustedDomains": "社内ドメイン・アドレス設定",
+  "setting_configUnsafeDomains": "注意が必要なドメイン・アドレス設定",
+  "setting_configUnsafeFiles": "注意が必要なファイル名設定",
+  "setting_configWarning": "警告設定",
+  "setting_configWindowTitle": "FlexConfirmMail設定",
+  "setting_aboutAddon": "このアドオンについて",
+  "setting_saveAndQuit": "保存して閉じる"
 }
