--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -50,5 +50,6 @@
   "setting_configWarning": "To/Cc",
   "setting_configWindowTitle": "设置FlexConfirmMail",
   "setting_aboutAddon": "版本",
-  "setting_saveAndQuit": "保存并退出"
+  "setting_saveAndQuit": "保存并退出",
+  "setting_cancel": "取消"
 }
