--- a/locales/ja.json
+++ b/locales/ja.json
@@ -51,5 +51,6 @@
   "setting_configWarning": "警告設定",
   "setting_configWindowTitle": "FlexConfirmMail設定",
   "setting_aboutAddon": "このアドオンについて",
-  "setting_saveAndQuit": "保存して閉じる"
+  "setting_saveAndQuit": "保存して閉じる",
+  "setting_cancel": "キャンセル"
 }
