--- a/locales/en.json
+++ b/locales/en.json
@@ -55,6 +55,6 @@
   "setting_saveAndQuit": "Save and Exit",
   "setting_cancel": "Cancel",
   "setting_configDelayDeliveryTime": "Delay delivery",
-  "setting_delayDeliveryEnabled": "Emable delay delivery",
-  "setting_delayDeliverySeconds": "Delay sending a message by (in seconds)"
+  "setting_delayDeliveryEnabled": "Enable delay delivery",
+  "setting_delayDeliverySeconds": "Delay delivery a message by (in seconds)"
 }
