Improve ja resource
Remove "setting" from the setting tab

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -40,14 +40,14 @@
   "setting_configCountAllowSkip": "カウントダウンのダイアログの「いますぐ送信」ボタンを有効化する",
   "setting_configCountEnabled": "メール送信前のカウントダウンを有効化する",
   "setting_configCountSeconds": "送信までのカウントダウン秒数:",
-  "setting_configGeneral": "一般設定",
+  "setting_configGeneral": "一般",
   "setting_configMainSkipIfNoExt": "宛先が社内のみの場合は確認をスキップする",
   "setting_configSafeBccEnabled": "To/CCに一定数以上のドメインが含まれている場合に警告する",
   "setting_configSafeBccThreshold": "警告対象となるドメインの数:",
   "setting_configSafeNewDomainsEnabled": "返信の宛先に今まで含まれていなかったドメインのアドレスが追加された場合に警告する",
-  "setting_configTrustedDomains": "社内ドメイン・アドレス設定",
-  "setting_configUnsafeDomains": "注意が必要なドメイン・アドレス設定",
-  "setting_configUnsafeFiles": "注意が必要なファイル名設定",
+  "setting_configTrustedDomains": "社内ドメイン・アドレス",
+  "setting_configUnsafeDomains": "注意が必要なドメイン・アドレス",
+  "setting_configUnsafeFiles": "注意が必要なファイル名",
   "setting_configWarning": "警告設定",
   "setting_configWindowTitle": "FlexConfirmMail設定",
   "setting_aboutAddon": "このアドオンについて",
