Modify example domains for unsafe domains

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -28,9 +28,9 @@
   "setting_trustedDomainsPolicy" : "# 社内ドメイン・アドレス設定 ###\n# 組織設定により、社内ドメイン・アドレスとして以下が指定されています。\n#\n# ${policy}\n#\n# さらにドメイン・アドレスを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、ドメイン・アドレスを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n# @を含む場合はアドレスが指定されたとみなします。\n# @を含まない場合はドメインが指定されたとみなします。\n##################################\n\n${user}",
   "setting_trustedDomainsTemplate" : "# 社内ドメイン・アドレス設定 ###\n#\n# (1) 送信時に社内の宛先として扱うドメイン・アドレスを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n# (4) 指定にはワイルドカード（*および?）を使用可能です。\n# (5) @を含む場合はアドレスが指定されたとみなします。\n# (6) @を含まない場合はドメインが指定されたとみなします。\n#\n##################################\n\nexample.com\nexample.org",
   "setting_unsafeDomains" : "注意が必要なドメイン・アドレス",
-  "setting_unsafeDomainsExample" : "example.com\n-example.org",
+  "setting_unsafeDomainsExample" : "example.jp\n-example.net",
   "setting_unsafeDomainsPolicy" : "# 注意が必要なドメイン・アドレス設定 ###\n# 組織設定により、注意が必要なドメイン・アドレスとして以下が指定されています。\n#\n# ${policy}\n#\n# さらにドメイン・アドレスを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、ドメイン・アドレスを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n# @を含む場合はアドレスが指定されたとみなします。\n# @を含まない場合はドメインが指定されたとみなします。\n##################################\n\n${user}",
-  "setting_unsafeDomainsTemplate" : "# 注意が必要なドメイン・アドレス設定 ###\n#\n# (1) 送信時に警告対象とする注意ドメイン・アドレスを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n# (4) 指定にはワイルドカード（*および?）を使用可能です。\n# (5) @を含む場合はアドレスが指定されたとみなします。\n# (6) @を含まない場合はドメインが指定されたとみなします。\n#\n##################################\n\nexample.com\nexample.org",
+  "setting_unsafeDomainsTemplate" : "# 注意が必要なドメイン・アドレス設定 ###\n#\n# (1) 送信時に警告対象とする注意ドメイン・アドレスを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n# (4) 指定にはワイルドカード（*および?）を使用可能です。\n# (5) @を含む場合はアドレスが指定されたとみなします。\n# (6) @を含まない場合はドメインが指定されたとみなします。\n#\n##################################\n\nexample.jp\nexample.net",
   "setting_unsafeFiles" : "注意が必要なファイル名",
   "setting_unsafeFilesExample" : "社外秘\n-除外キーワード",
   "setting_unsafeFilesPolicy" : "# 注意が必要なファイル名設定 ###\n# 組織設定により、注意が必要なファイル名として以下が指定されています。\n#\n# ${policy}\n#\n# さらにキーワードを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、キーワードを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n##################################\n\n${user}",
