--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -33,7 +33,7 @@
   "setting_unsafeDomainsTemplate" : "# 不安全域，地址 ###\n#\n# (1) 设置要被提醒的域，地址\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) Wildcards (* and ?) are available.\n# (5) When an entry contains @, the entry is regarded as address.\n# (5) When an entry does not contains @, the entry is regarded as domain.\n#\n##################################\n\nexample.jp\nexample.net",
   "setting_unsafeFiles" : "不安全的文件名",
   "setting_unsafeFilesExample" : "保密\n-排除项目",
-  "setting_unsafeFilesPolicy" : "# 不安全的文件名 ###\n# 以下关键词被组策略认为是不安全的。\n#\n# {policy}\n#\n# 要添加更多的关键词，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除关键词。\n# And wildcards (* and ?) are also available.\n##################################\n\n${user}",
+  "setting_unsafeFilesPolicy" : "# 不安全的文件名 ###\n# 以下关键词被组策略认为是不安全的。\n#\n# ${policy}\n#\n# 要添加更多的关键词，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除关键词。\n# And wildcards (* and ?) are also available.\n##################################\n\n${user}",
   "setting_unsafeFilesTemplate" : "# 不安全的文件名 ###\n#\n# (1) 为附件设置警告关键字\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) Wildcards (* and ?) are available.\n#\n##################################\n\n秘密",
   "setting_configMisc": "其他设置",
   "setting_configCount": "倒计时",
