Update locales resources
* Apply newly translated zh-CN resources
* Modify en resources to more appropriate expressions

--- a/locales/en.json
+++ b/locales/en.json
@@ -45,13 +45,13 @@
   "setting_configSafeBccEnabled": "Enable \"too many domains in To/Cc fields\" warnings",
   "setting_configSafeBccThreshold": "Warn if To/Cc fields contain",
   "setting_configSafeNewDomainsEnabled": "Confirm when any recipients with domains different from any existing recipients are added",
-  "setting_configTrustedDomains": "Configure Trusted Domains and Addresses",
-  "setting_configUnsafeDomains": "Configure Unsafe Domains and Addresses",
-  "setting_configUnsafeFiles": "Configure Unsafe Files",
+  "setting_configTrustedDomains": "Trusted Domains and Addresses",
+  "setting_configUnsafeDomains": "Unsafe Domains and Addresses",
+  "setting_configUnsafeFiles": "Unsafe Files",
   "setting_configWarning": "To/Cc",
   "setting_configWindowTitle": "FlexConfirmMail Options",
   "setting_aboutAddon": "Version",
-  "setting_resetSetting": "Reset setting",
+  "setting_resetSetting": "Reset to Default",
   "setting_saveAndQuit": "Save and Exit",
   "setting_cancel": "Cancel",
   "setting_configDelayDeliveryTime": "Delay delivery",
