--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -13,8 +13,8 @@
   "confirmation_attachmentCheckboxLabel": "[附件] ${name}",
 
   "newlyAddedDomainReconfirmation_caption": "警告！",
-  "_newlyAddedDomainReconfirmation_messageBefore": "There are recipients with domains not included in the recipients of the original message.",
-  "_newlyAddedDomainReconfirmation_messageAfter": "Do you really want to send this message?",
+  "newlyAddedDomainReconfirmation_messageBefore": "收件人添加了以下原邮件收件人中未包含的域名地址。",
+  "newlyAddedDomainReconfirmation_messageAfter": "请确认是否要发送此邮件？",
   "newlyAddedDomainReconfirmation_sendButtonLabel": "发送",
   "newlyAddedDomainReconfirmation_cancelButtonLabel": "取消",
 
@@ -44,13 +44,14 @@
   "setting_configMainSkipIfNoExt": "如果所有目的地都是受信任的，则立即发送",
   "setting_configSafeBccEnabled": "当To/Cc包含许多域时发出警告",
   "setting_configSafeBccThreshold": "警告的阈值:",
-  "setting_configSafeNewDomainsEnabled": "Confirm when any recipients with domains different from any existing recipients are added",
+  "setting_configSafeNewDomainsEnabled": "当回复的收件人地址中新增了与现有收件人域名不同的地址时，系统将警告确认",
   "setting_configTrustedDomains": "信任域，地址",
+  "setting_configUnsafeDomains": "不安全域，地址",
   "setting_configUnsafeFiles": "不安全的文件名",
   "setting_configWarning": "To/Cc",
   "setting_configWindowTitle": "设置FlexConfirmMail",
   "setting_aboutAddon": "版本",
-  "setting_resetSetting": "Reset setting",
+  "setting_resetSetting": "重置设置",
   "setting_saveAndQuit": "保存并退出",
   "setting_cancel": "取消",
   "setting_configDelayDeliveryTime": "Delay delivery",
