--- a/locales/ja.json
+++ b/locales/ja.json
@@ -7,10 +7,13 @@
   "confirmation_cancelButtonLabel": "キャンセル",
 
   "confirmation_safeBccThresholdCheckboxLabel": "[警告] To・Ccに${threshold}件以上のドメインが含まれています。",
+  "confirmation_safeBccThresholdForAttendeesCheckboxLabel": "[警告] 出席者に${threshold}件以上のドメインが含まれています。",
   "confirmation_unsafeDomainRecipientCheckboxLabel": "[警告] 注意が必要なドメイン（${domain}）が宛先に含まれています。",
   "confirmation_unsafeRecipientCheckboxLabel": "[警告] 注意が必要な宛先（${address}）が含まれています。",
   "confirmation_unsafeAttachmentCheckboxLabel": "[警告] 注意が必要なファイル名（${name}）が含まれています。",
   "confirmation_attachmentCheckboxLabel": "[添付ファイル] ${name}",
+  "confirmation_requiredAttendee": "必須出席者",
+  "confirmation_optionalAttendee": "任意出席者",
 
   "newlyAddedDomainReconfirmation_caption": "CAUTION!",
   "newlyAddedDomainReconfirmation_messageBefore": "返信元のメールの宛先に含まれていなかったドメインの以下の宛先が追加されています。",
