--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -17,6 +17,7 @@
 
   "newlyAddedDomainReconfirmation_caption": "警告！",
   "newlyAddedDomainReconfirmation_messageBefore": "收件人添加了以下原邮件收件人中未包含的域名地址。",
+  "newlyAddedDomainReconfirmation_messageBeforeForAppointment": "There are attendees with domains not included in the attendees of the original appointment.",
   "newlyAddedDomainReconfirmation_messageAfter": "请确认是否要发送此邮件？",
   "newlyAddedDomainReconfirmation_sendButtonLabel": "发送",
   "newlyAddedDomainReconfirmation_cancelButtonLabel": "取消",
@@ -45,6 +46,7 @@
   "setting_configCountSeconds": "倒计时秒:",
   "setting_configGeneral": "一般",
   "setting_configMainSkipIfNoExt": "如果所有目的地都是受信任的，则立即发送",
+  "setting_configEnableAppintmentWarning": "Enable warning on sending an appointment from Calendar.",
   "setting_configSafeBccEnabled": "当To/Cc包含许多域时发出警告",
   "setting_configSafeBccThreshold": "警告的阈值:",
   "setting_configSafeNewDomainsEnabled": "当回复的收件人地址中新增了与现有收件人域名不同的地址时，系统将警告确认",
