--- a/locales/en.json
+++ b/locales/en.json
@@ -17,6 +17,7 @@
 
   "newlyAddedDomainReconfirmation_caption": "CAUTION!",
   "newlyAddedDomainReconfirmation_messageBefore": "There are recipients with domains not included in the recipients of the original message.",
+  "newlyAddedDomainReconfirmation_messageBeforeForAppointment": "There are attendees with domains not included in the attendees of the original appointment.",
   "newlyAddedDomainReconfirmation_messageAfter": "Do you really want to send this message?",
   "newlyAddedDomainReconfirmation_sendButtonLabel": "Send",
   "newlyAddedDomainReconfirmation_cancelButtonLabel": "Cancel",
@@ -45,6 +46,7 @@
   "setting_configCountSeconds": "Delay sending a message by",
   "setting_configGeneral": "General",
   "setting_configMainSkipIfNoExt": "Skip confirmation if all the recpients are trusted.",
+  "setting_configEnableAppintmentWarning": "Enable warning on sending an appointment from Calendar.",
   "setting_configSafeBccEnabled": "Enable \"too many domains in To/Cc fields\" warnings",
   "setting_configSafeBccThreshold": "Warn if To/Cc fields contain",
   "setting_configSafeNewDomainsEnabled": "Confirm when any recipients with domains different from any existing recipients are added",
