attachments-confirmation.mjs: Modify to use only a classiy method

--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,9 @@
   "block_messageBeforeForMailRecipients": "This mail cannot be sent because its recipients contain forbidden recipients.",
   "block_messageBeforeForAppointmentRecipients": "This event cannot be sent because its recipients contain forbidden recipients.",
   "block_messageAfterForRecipients": "Please change the recipients.",
+  "block_messageBeforeForMailAttachments": "The mail cannot be sent because its attachments contain forbidden files.",
+  "block_messageBeforeForAppointmentAttachments": "The appointment cannot be sent because its attachments contain forbidden files.",
+  "block_messageAfterForAttachments": "Please change the attachments.",
 
   "newlyAddedDomainReconfirmation_caption": "CAUTION!",
   "newlyAddedDomainReconfirmation_messageBefore": "There are recipients with domains not included in the recipients of the original message.",
