--- a/locales/en.json
+++ b/locales/en.json
@@ -53,6 +53,7 @@
   "setting_configAppointmentConfirmationEnabled": "Enable confirmation on sending an appointment from Calendar.",
   "setting_configSafeBccEnabled": "Enable \"too many domains in To/Cc fields\" warnings",
   "setting_configSafeBccThreshold": "Warn if To/Cc fields contain",
+  "setting_configSafeBccReconfirmationThreshold": "Re-warn if To/Cc fields contain",
   "setting_configSafeNewDomainsEnabled": "Confirm when any recipients with domains different from any existing recipients are added",
   "setting_configTrustedDomains": "Trusted Domains and Addresses",
   "setting_configUnsafeDomains": "Unsafe Domains and Addresses",
