--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -22,7 +22,9 @@
   "newlyAddedDomainReconfirmation_caption": "警告！",
   "newlyAddedDomainReconfirmation_messageBefore": "收件人添加了以下原邮件收件人中未包含的域名地址。",
   "newlyAddedDomainReconfirmation_messageBeforeForAppointment": "There are attendees with domains not included in the attendees of the original appointment.",
-  "newlyAddedDomainReconfirmation_messageAfter": "请确认是否要发送此邮件？",
+  "Reconfirmation_safeBccReconfirmationThresholdWarning": "To/Cc 包含${threshold}个以上的域。",
+  "Reconfirmation_safeBccReconfirmationThresholdAttendeesWarning": "Attendees 包含${threshold}个以上的域。",
+  "Reconfirmation_confirmToSend": "请确认是否要发送此邮件？",
   "Reconfirmation_okButtonLabel": "OK",
   "Reconfirmation_cancelButtonLabel": "取消",
 
