--- a/locales/ja.json
+++ b/locales/ja.json
@@ -28,7 +28,7 @@
   "Reconfirmation_safeBccReconfirmationThresholdWarning": "To・Ccに${threshold}件以上のドメインが含まれています。",
   "Reconfirmation_safeBccReconfirmationThresholdAttendeesWarning": "出席者に${threshold}件以上のドメインが含まれています。",
   "Reconfirmation_unsafeDomains": "注意が必要な以下のドメインが含まれています。",
-  "Reconfirmation_unsafeAddresses": "注意が必要な宛先が含まれています。",
+  "Reconfirmation_unsafeAddresses": "注意が必要な以下の宛先が含まれています。",
   "Reconfirmation_confirmToSend": "送信してよろしいですか？",
   "Reconfirmation_okButtonLabel": "OK",
   "Reconfirmation_cancelButtonLabel": "キャンセル",
