Implement unsafe files reconfirmation logic

--- a/locales/en.json
+++ b/locales/en.json
@@ -27,6 +27,9 @@
   "newlyAddedDomainReconfirmation_messageBeforeForAppointment": "There are attendees with domains not included in the attendees of the original appointment.",
   "Reconfirmation_safeBccReconfirmationThresholdWarning": "[Warn] To/Cc fields contain no less than ${threshold} domains.",
   "Reconfirmation_safeBccReconfirmationThresholdAttendeesWarning": "[Warn] Attendee fields contain no less than ${threshold} domains.",
+  "Reconfirmation_unsafeDomains": "The following unsafe domains found in the recipient list.",
+  "Reconfirmation_unsafeAddresses": "The following unsafe addresses found in the recipient list.",
+  "Reconfirmation_unsafeFiles": "The following unsafe files found in the attachment list.",
   "Reconfirmation_confirmToSend": "Do you really want to send this message?",
   "Reconfirmation_okButtonLabel": "OK",
   "Reconfirmation_cancelButtonLabel": "Cancel",
