Unify Cc to CC and Bcc to BCC

--- a/locales/en.json
+++ b/locales/en.json
@@ -76,8 +76,8 @@
   "setting_configSafeBccEnabled": "Enable \"too many domains in To/Cc fields\" warnings",
   "setting_configSafeBccThreshold": "Warn if To/Cc fields contain",
   "setting_configSafeBccReconfirmationThreshold": "Re-warn if To/Cc fields contain",
-  "setting_configConvertToBccEnabled": "Enable to convert To/Cc to Bcc when too many To/CC fields",
-  "setting_configConvertToBccThreshold": "Convert if To/Cc fields are greater than or equal to",
+  "setting_configConvertToBccEnabled": "Enable to convert To/CC to Bcc when too many To/CC fields",
+  "setting_configConvertToBccThreshold": "Convert if To/CC fields are greater than or equal to",
   "setting_configSafeNewDomainsEnabled": "Confirm when any recipients with domains different from any existing recipients are added",
   "setting_configTrustedDomains": "Trusted Domains and Addresses",
   "setting_configUnsafeDomains": "Unsafe Domains and Addresses",
