--- a/locales/ja.json
+++ b/locales/ja.json
@@ -53,6 +53,7 @@
   "setting_unsafeFilesExample" : "社外秘\n-除外キーワード",
   "setting_unsafeFilesPolicy" : "# 注意が必要なファイル名設定 ###\n# 組織設定により、注意が必要なファイル名として以下が指定されています。\n#\n# ${policy}\n#\n# さらにキーワードを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、キーワードを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n# 以下のセクションが指定可能です。\n#   * [WARNING]: 警告する\n#   * [REWARNING]: 再警告する\n#   * [BLOCK]: 送信を禁止する\n# セクションを省略した場合、[WARNING]扱いになります。\n##################################\n\n${user}",
   "setting_unsafeFilesTemplate" : "# 注意が必要なファイル名設定 ###\n#\n# (1) 添付ファイルに含まれる場合に警告する注意ワードを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n# (4) 指定にはワイルドカード（*および?）を使用可能です\n# (5) 以下のセクションが指定可能です。\n#        * [WARNING]: 警告する\n#        * [REWARNING]: 再警告する\n#        * [BLOCK]: 送信を禁止する\n#      セクションを省略した場合、[WARNING]扱いになります。\n#\n##################################\n\n社外秘\n機密",
+  "setting_configUnsafeBodies" : "注意が必要な本文",
   "setting_configMisc": "その他の設定",
   "setting_configCount": "送信カウントダウン設定",
   "setting_configCountAllowSkip": "カウントダウンのダイアログの「いますぐ送信」ボタンを有効化する",
