--- a/locales/ja.json
+++ b/locales/ja.json
@@ -53,7 +53,7 @@
   "setting_unsafeFilesExample" : "社外秘\n-除外キーワード",
   "setting_unsafeFilesPolicy" : "# 注意が必要なファイル名設定 ###\n# 組織設定により、注意が必要なファイル名として以下が指定されています。\n#\n# ${policy}\n#\n# さらにキーワードを追加する場合は、以下に1行ずつ入力してください。\n# また、先頭に「-」をつけると、キーワードを除外することができます。\n# 指定にはワイルドカード（*および?）も使用可能です。\n# 以下のセクションが指定可能です。\n#   * [WARNING]: 警告する\n#   * [REWARNING]: 再警告する\n#   * [BLOCK]: 送信を禁止する\n# セクションを省略した場合、[WARNING]扱いになります。\n##################################\n\n${user}",
   "setting_unsafeFilesTemplate" : "# 注意が必要なファイル名設定 ###\n#\n# (1) 添付ファイルに含まれる場合に警告する注意ワードを指定します。\n# (2) 以下の例のように一行に一件ずつ記載します。\n# (3) 冒頭が「#」から始まる行は無視されます。\n# (4) 指定にはワイルドカード（*および?）を使用可能です\n# (5) 以下のセクションが指定可能です。\n#        * [WARNING]: 警告する\n#        * [REWARNING]: 再警告する\n#        * [BLOCK]: 送信を禁止する\n#      セクションを省略した場合、[WARNING]扱いになります。\n#\n##################################\n\n社外秘\n機密",
-  "setting_configUnsafeBodies" : "注意が必要な本文",
+  "setting_unsafeBodies" : "注意が必要な本文",
   "setting_unsafeBodiesExample" : "[Example]\nKeywords=社外秘 \nMessage=[警告] 「社外秘」を本文に含んでいます。",
   "setting_unsafeBodiesPolicy" : "# 注意が必要な本文設定 ###\n# 組織設定により、注意が必要な本文として以下が指定されています。\n#\n# ${policy}\n#\n# さらにキーワードを追加する場合は、以下にセクションを追加してください。\n# セクション名は任意に指定可能です。\n# 各セクションで以下のパラメータを指定します。\n#     * Keywords: キーワードをカンマ（,）区切りで指定します。\n#         * キーワードの指定にはワイルドカード（*および?）も使用可能です。\n#         * 先頭に「-」をつけると、キーワードを除外することができます。\n#     * Message: キーワードにマッチした場合に表示する警告メッセージを指定します。\n # 冒頭が「#」から始まる行は無視されます。\n##################################\n\n${user}",
   "setting_unsafeBodiesTemplate" : "# 注意が必要な本文設定 ###\n#\n# (1) 本文に含まれる場合に警告する注意ワードを指定します。\n# (2) 以下の例のようにセクション単位でキーワードと警告メッセージを指定します。\n# (3) セクション名は任意に指定可能です。\n# (4) 各セクションで以下のパラメータを指定します。\n#     * Keywords: キーワードをカンマ（,）区切りで指定します。\n#         * キーワードの指定にはワイルドカード（*および?）も使用可能です。\n#         * 先頭に「-」をつけると、キーワードを除外することができます。\n#     * Message: キーワードにマッチした場合に表示する警告メッセージを指定します。\n# (5) 冒頭が「#」から始まる行は無視されます。\n##################################\n\n[Example]\nKeywords=社外秘 \nMessage=[警告] 「社外秘」を本文に含んでいます。",
@@ -72,6 +72,7 @@
   "setting_configTrustedDomains": "社内ドメイン・アドレス",
   "setting_configUnsafeDomains": "注意が必要なドメイン・アドレス",
   "setting_configUnsafeFiles": "注意が必要なファイル名",
+  "setting_configUnsafeBodies" : "注意が必要な本文",
   "setting_configWarning": "警告設定",
   "setting_configWindowTitle": "FlexConfirmMail設定",
   "setting_aboutAddon": "このアドオンについて",
