--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -17,27 +17,27 @@
   "confirmation_requiredAttendee": "必需的与会者",
   "confirmation_optionalAttendee": "可选与会者",
 
-  "block_messageBeforeForMailRecipients": "This mail cannot be sent because its recipients contain forbidden recipients.",
-  "block_messageBeforeForAppointmentRecipients": "This event cannot be sent because its recipients contain forbidden recipients.",
+  "block_messageBeforeForMailRecipients": "由于指定了被禁止发送的收件人，所以无法发送邮件。",
+  "block_messageBeforeForAppointmentRecipients": "由于指定了被禁止发送的收件人，所以无法发送日程预定。",
   "block_messageBeforeForMailDistributionLists": "This mail cannot be sent because unexpanded distribution lists or contact groups have been specified.",
   "block_messageBeforeForAppointmentDistributionLists": "This event cannot be sent because unexpanded distribution lists or contact groups have been specified.",
   "block_messageAfterDistributionLists": "Please expand the distribution lists or contact groups.",
-  "block_messageAfterForRecipients": "Please change the recipients.",
-  "block_messageBeforeForMailAttachments": "The mail cannot be sent because its attachments contains forbidden files.",
-  "block_messageBeforeForAppointmentAttachments": "The appointment cannot be sent because its attachments contains forbidden files.",
-  "block_messageAfterForAttachments": "Please change the attachments.",
-  "block_messageBeforeForMailBodies": "The mail cannot be sent because its body contains forbidden words.",
-  "block_messageBeforeForAppointmentBodies": "The appointment cannot be sent because its body contains forbidden words.",
-  "block_messageAfterForBodies": "Please change the body",
+  "block_messageAfterForRecipients": "请更改收件人。",
+  "block_messageBeforeForMailAttachments": "由于附加了禁止发送的文件，所以无法发送邮件。",
+  "block_messageBeforeForAppointmentAttachments": "由于附加了禁止发送的文件，所以无法发送日程预定。",
+  "block_messageAfterForAttachments": "请更改附件。",
+  "block_messageBeforeForMailBodies": "由于正文中包含禁止发送的字符串，所以无法发送邮件。",
+  "block_messageBeforeForAppointmentBodies": "由于正文中包含禁止发送的字符串，所以无法发送日程预定。",
+  "block_messageAfterForBodies": "请更改正文。",
 
   "newlyAddedDomainReconfirmation_caption": "警告！",
   "newlyAddedDomainReconfirmation_messageBefore": "收件人添加了以下原邮件收件人中未包含的域名地址。",
-  "newlyAddedDomainReconfirmation_messageBeforeForAppointment": "There are attendees with domains not included in the attendees of the original appointment.",
+  "newlyAddedDomainReconfirmation_messageBeforeForAppointment": "添加了变更前的日程出席者中未包含的以下域的出席者。",
   "Reconfirmation_safeBccReconfirmationThresholdWarning": "To/Cc 包含${threshold}个以上的域。",
   "Reconfirmation_safeBccReconfirmationThresholdAttendeesWarning": "与会者 包含${threshold}个以上的域。",
-  "Reconfirmation_unsafeDomains": "The following unsafe domains found in the recipient list.",
-  "Reconfirmation_unsafeAddresses": "The following unsafe addresses found in the recipient list.",
-  "Reconfirmation_unsafeFiles": "The following unsafe files found in the attachment list.",
+  "Reconfirmation_unsafeDomains": "包含以下需要注意的域名。",
+  "Reconfirmation_unsafeAddresses": "包含以下需要注意的收件人。",
+  "Reconfirmation_unsafeFiles": "包含以下需要注意的文件。",
   "Reconfirmation_confirmToSend": "请确认是否要发送此邮件？",
   "Reconfirmation_okButtonLabel": "OK",
   "Reconfirmation_cancelButtonLabel": "取消",
@@ -47,27 +47,27 @@
   "countDown_sendButtonLabel": "现在发送",
   "countDown_cancelButtonLabel": "取消",
 
-  "convertToBcc_description": "${threshold} or more To/CC fields are specified.",
-  "convertToBcc_confirmation": "Do you want to convert To/CC to BCC?",
-  "convertToBcc_convertButton": "Convert",
-  "convertToBcc_notConvertButton": "Do not Convert",
+  "convertToBcc_description": "已指定${threshold}个及以上的To/CC。",
+  "convertToBcc_confirmation": "是否将To/CC转换为BCC？",
+  "convertToBcc_convertButton": "转换",
+  "convertToBcc_notConvertButton": "不转换",
 
   "setting_trustedDomains" : "信任域，地址",
   "setting_trustedDomainsExample" : "example.com\n-example.org",
-  "setting_trustedDomainsPolicy" : "# 信任域，地址 ###\n# 以下域，地址是由组策略信任的。\n#\n# ${policy}\n#\n# 要添加更多的域，地址，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除域名，地址。\n# And wildcards (* and ?) are also available.\n# When an entry contains @, the entry is regarded as address.\n# When an entry does not contains @, the entry is regarded as domain.\n# The following sections can be specified:\n#   * [WARNING]: Show warning\n#   * [REWARNING]: Show the re-warning dialog\n#   * [BLOCK]: Prohibit sending\n# If the section is omitted, it is regarded as [WARNING].\n##################################\n\n${user}",
-  "setting_trustedDomainsTemplate" : "# 信任域，地址 ###\n#\n# (1) 设置域，地址被视为内部目的地\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) Wildcards (* and ?) are available.\n# (5) When an entry contains @, the entry is regarded as address.\n# (6) When an entry does not contains @, the entry is regarded as domain.\n#\n##################################\n\nexample.com\nexample.org",
+  "setting_trustedDomainsPolicy" : "# 信任域，地址 ###\n# 以下域，地址是由组策略信任的。\n#\n# ${policy}\n#\n# 要添加更多的域，地址，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除域名，地址。\n# 可使用通配符（*和?）。\n# 包含@时视为地址。\n#未包含@时视为域名。\n##################################\n\n${user}",
+  "setting_trustedDomainsTemplate" : "# 信任域，地址 ###\n#\n# (1) 设置域，地址被视为内部目的地\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) 可使用通配符（*和?）。\n# (5) 包含@时视为地址。\n# (6) 未包含@时视为域名。\n#\n##################################\n\nexample.com\nexample.org",
   "setting_unsafeDomains" : "不安全域，地址",
   "setting_unsafeDomainsExample" : "example.jp\n-example.net",
-  "setting_unsafeDomainsPolicy" : "# 不安全域，地址 ###\n# 以下域，地址被组策略视为不安全的域，地址。\n#\n# ${policy}\n#\n# 要添加更多的域，地址，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除域名，地址。\n# And wildcards (* and ?) are also available.\n# When an entry contains @, the entry is regarded as address.\n# When an entry does not contains @, the entry is regarded as domain.\n# The following sections can be specified:\n#   * [WARNING]: Show warning\n#   * [REWARNING]: Show the re-warning dialog\n#   * [BLOCK]: Prohibit sending\n# If the section is omitted, it is regarded as [WARNING].\n##################################\n\n${user}",
-  "setting_unsafeDomainsTemplate" : "# 不安全域，地址 ###\n#\n# (1) 设置要被提醒的域，地址\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) Wildcards (* and ?) are available.\n# (5) When an entry contains @, the entry is regarded as address.\n# (6) When an entry does not contains @, the entry is regarded as domain.\n# (7) The following sections can be specified:\n#        * [WARNING]: Show warning\n#        * [REWARNING]: Show the re-warning dialog\n#        * [BLOCK]: Prohibit sending\n#      If the section is omitted, it is regarded as [WARNING].\n#\n##################################\n\nexample.jp\nexample.net",
+  "setting_unsafeDomainsPolicy" : "# 不安全域，地址 ###\n# 以下域，地址被组策略视为不安全的域，地址。\n#\n# ${policy}\n#\n# 要添加更多的域，地址，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除域名，地址。\n# 可使用通配符（*和?）。\n# 包含@时视为地址。\n# 未包含@时视为域名。\n# 可指定以下区段：\n#   * [WARNING]: 警告\n#   * [REWARNING]: 再警告\n#   * [BLOCK]: 禁止发送\n# 省略区段时视为[WARNING]。\n##################################\n\n${user}",
+  "setting_unsafeDomainsTemplate" : "# 不安全域，地址 ###\n#\n# (1) 设置要被提醒的域，地址\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) 可使用通配符（*和?）。\n# (5) 包含@时视为地址。\n# (6) 未包含@时视为域名。\n# (7) 可指定以下区段：\n#        * [WARNING]: 警告\n#        * [REWARNING]: 再警告\n#        * [BLOCK]: 禁止发送\n#      省略区段时视为[WARNING]。\n#\n##################################\n\nexample.jp\nexample.net",
   "setting_unsafeFiles" : "不安全的文件名",
   "setting_unsafeFilesExample" : "保密\n-排除项目",
-  "setting_unsafeFilesPolicy" : "# 不安全的文件名 ###\n# 以下关键词被组策略认为是不安全的。\n#\n# ${policy}\n#\n# 要添加更多的关键词，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除关键词。\n# And wildcards (* and ?) are also available.\n# The following sections can be specified:\n#   * [WARNING]: Show warning\n#   * [REWARNING]: Show the re-warning dialog\n#   * [BLOCK]: Prohibit sending\n# If the section is omitted, it is regarded as [WARNING].\n##################################\n\n${user}",
-  "setting_unsafeFilesTemplate" : "# 不安全的文件名 ###\n#\n# (1) 为附件设置警告关键字\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) Wildcards (* and ?) are available.\n# (5) The following sections can be specified:\n#        * [WARNING]: Show warning\n#        * [REWARNING]: Show the re-warning dialog\n#        * [BLOCK]: Prohibit sending\n#      If the section is omitted, it is regarded as [WARNING].\n#\n##################################\n\n秘密",
-  "setting_unsafeBodies" : "Unsafe Bodies",
-  "setting_unsafeBodiesExample" : "[Example]\nKeywords=Confidential,confidential,Confidential\nMessage=[Warn] Including \"Confidential\" in body.\nWarningType=WARNING\nLanguage=zh",
-  "setting_unsafeBodiesPolicy" : "# Unsafe Bodies ###\n# The following keywords (sections) are considerd unsafe by Group Policy.\n#\n# ${policy}\n#\n# To add more keywords, input sections below.\n# You can specify any section name.\n# The following parameters can be specified in each section:\n#     * Keywords: Specify keywords separated by commas (,).\n#         * You can also exclude keywords by adding \"-\" at the beginning.\n#         * Wildcards (* and ?) are also available.\n#     * Message: Specify a warning message to be displayed when a keyword is matched.\n#     * Language: Specify the target language (ja-JP, en, etc.). If omitted, all languages is targeted.\n#     * WarningType: Specify the type of warning. The following types can be specified.\n#         * WARNING: Show warning\n#         * REWARNING: Show the re-warning dialog\n#         * BLOCK: Prohibit sending\n#         * If omitted, it is regarded as WARNING.\n# Lines starting with # are ignored.\n##################################\n\n${user}",
-  "setting_unsafeBodiesTemplate" : "# Unsafe Bodies ###\n#\n# (1) Set the list of keywords (sections) to show an \"unsafe bodies\" warning.\n# (2) Enter sections as follows.\n# (3) You can specify any section name.\n# (4) The following parameters can be specified in each section:\n#     * Keywords: Specify keywords separated by commas (,).\n#         * You can also exclude keywords by adding \"-\" at the beginning.\n#         * Wildcards (* and ?) are also available.\n#     * Message: Specify a warning message to be displayed when a keyword is matched.\n#     * Language: Specify the target language (ja-JP, en, etc.). If omitted, all languages is targeted.\n#     * WarningType: Specify the type of warning. The following types can be specified.\n#         * WARNING: Show warning\n#         * REWARNING: Show the re-warning dialog\n#         * BLOCK: Prohibit sending\n#         * If omitted, it is regarded as WARNING.\n# (5) Lines starting with # are ignored.\n##################################\n\n[Example]\nKeywords=Confidential,confidential,Confidential\nMessage=[Warn] Including \"Confidential\" in body.\nWarningType=WARNING\nLanguage=zh",
+  "setting_unsafeFilesPolicy" : "# 不安全的文件名 ###\n# 以下关键词被组策略认为是不安全的。\n#\n# ${policy}\n#\n# 要添加更多的关键词，请在下面输入条目（每行一个）。\n# 你也可以通过在开头添加\"-\"来排除关键词。\n# 可使用通配符（*和?）。\n# 可指定以下区段：\n#   * [WARNING]: 警告\n#   * [REWARNING]: 再警告\n#   * [BLOCK]:  禁止发送\n# 省略区段时视为[WARNING]。\n##################################\n\n${user}",
+  "setting_unsafeFilesTemplate" : "# 不安全的文件名 ###\n#\n# (1) 为附件设置警告关键字\n# (2) 每行写一个条目，如下所示\n# (3) 以 \"#\" 开头的行被忽略\n# (4) 可使用通配符（*和?）\n# (5) 可指定以下区段：\n#        * [WARNING]: 警告\n#        * [REWARNING]: 再警告\n#        * [BLOCK]: 禁止发送\n#      省略区段时视为[WARNING]。\n#\n##################################\n\n社外秘\n机密",
+  "setting_unsafeBodies" : "不安全的正文",
+  "setting_unsafeBodiesExample" : "[Example]\nKeywords=社外秘 \nMessage=[警告] 正文中包含“社外秘”。\nWarningType=WARNING\nLanguage=zh-CN",
+  "setting_unsafeBodiesPolicy" : "# 不安全的正文设置 ###\n# 根据组织设置，以下被指定为不安全的正文。\n#\n# ${policy}\n#\n# 如需添加更多关键词，请在下方添加区段。\n# 区段名可自定义。\n# 每个区段可指定以下参数：\n#     * Keywords: 用逗号（,）分隔的关键词。\n#         * 关键词可使用通配符（*和?）。\n#         * 以“-”开头可排除该关键词。\n#     * Message: 匹配关键词时显示的警告信息。\n#     * Language: 指定适用语言（如ja-JP, en等），省略时适用于所有语言。\n#     * WarningType: 指定警告类型，可选以下类型。\n#         * WARNING: 警告\n#         * REWARNING: 再警告\n#         * BLOCK: 禁止发送\n#         * 省略时视为WARNING。\n# 以“#”开头的行会被忽略。\n##################################\n\n${user}",
+  "setting_unsafeBodiesTemplate" : "# 不安全的正文设置 ###\n#\n# (1) 指定正文中包含时需要警告的关键词。\n# (2) 如下例，以区段为单位指定关键词和警告信息。\n# (3)区段名可自定义。\n# (4) 每个区段可指定以下参数：\n#     * Keywords: 用逗号（,）分隔的关键词。\n#         * 关键词可使用通配符（*和?）。\n#         * 以“-”开头可排除该关键词。\n#     * Message: 匹配关键词时显示的警告信息。\n#     * Language: 指定适用语言（如ja-JP, en等），省略时适用于所有语言。\n#     * WarningType: 指定警告类型，可选以下类型。\n#         * WARNING: 警告\n#         * REWARNING: 再警告\n#         * BLOCK: 禁止发送\n#         * 省略时视为WARNING。\n# (5) 以“#”开头的行会被忽略。\n##################################\n\n[Example]\nKeywords=社外秘 \nMessage=[警告] 正文中包含“社外秘”。\nWarningType=WARNING\nLanguage=zh-CN",
   "setting_configMisc": "其他设置",
   "setting_configCount": "倒计时",
   "setting_configCountAllowSkip": "激活\"现在发送\"按钮",
@@ -75,28 +75,28 @@
   "setting_configCountSeconds": "倒计时秒:",
   "setting_configGeneral": "一般",
   "setting_configMainSkipIfNoExt": "如果所有目的地都是受信任的，则立即发送",
-  "setting_configCountSkipIfNoExt": "Skip the countdown clock when sending a message if all the recpients are trusted.",
-  "setting_configUntrustUnsafeRecipients": "Treat recipients as \"not trusted\" if they are matched to unsafe patterns.",
-  "setting_configAppointmentConfirmationEnabled": "Enable confirmation on sending an appointment from Calendar.",
+  "setting_configCountSkipIfNoExt": "仅为公司内部收件人时，跳过邮件发送前的倒计时",
+  "setting_configUntrustUnsafeRecipients": "将符合需要注意模式的收件人视为“非公司内部”",
+  "setting_configAppointmentConfirmationEnabled": "通过日程预定表发送日程预定时也进行确认",
   "setting_configSafeBccEnabled": "当To/Cc包含许多域时发出警告",
   "setting_configSafeBccThreshold": "警告的阈值:",
-  "setting_configSafeBccReconfirmationThreshold": "Re-warn if To/Cc fields contain",
-  "setting_configConvertToBccEnabled": "Enable to convert To/CC to BCC when too many To/CC fields",
-  "setting_configConvertToBccThreshold": "Convert if To/CC fields are greater than or equal to",
+  "setting_configSafeBccReconfirmationThreshold": "需要再次警告的域名数量",
+  "setting_configConvertToBccEnabled": "当To/CC达到一定数量时转换为BCC",
+  "setting_configConvertToBccThreshold": "需转换为BCC的To/CC数量：",
   "setting_configSafeNewDomainsEnabled": "当回复的收件人地址中新增了与现有收件人域名不同的地址时，系统将警告确认",
   "setting_configTrustedDomains": "信任域，地址",
   "setting_configUnsafeDomains": "不安全域，地址",
   "setting_configUnsafeFiles": "不安全的文件名",
-  "setting_configUnsafeBodies" : "Unsafe Bodies",
-  "setting_configWarning": "To/Cc",
+  "setting_configUnsafeBodies" : "不安全的正文",
+  "setting_configWarning": "警告設定",
   "setting_configWindowTitle": "设置FlexConfirmMail",
   "setting_aboutAddon": "版本",
   "setting_resetSetting": "重置设置",
   "setting_saveAndQuit": "保存并退出",
   "setting_cancel": "取消",
-  "setting_configDelayDeliveryTime": "Delay delivery",
-  "setting_delayDeliveryEnabled": "Enable delay delivery",
-  "setting_delayDeliverySeconds": "Delay delivery a message by (in seconds)",
+  "setting_configDelayDeliveryTime": "延迟发送设置",
+  "setting_delayDeliveryEnabled": "启用延迟发送",
+  "setting_delayDeliverySeconds": "发送前的延迟秒数",
   "setting_requireCheckSubject": "要求确认主题",
   "setting_requireCheckBody": "要求确认电子邮件的文本",
   "setting_configBlockDistributionLists":	"Block sending if unexpanded distribution lists or contact groups are included",
